cleanup for today

--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 <html manifest="cache.manifest">
   <body>
     <div class="content">
-      refextu<br/>
-      Ulrich Schmidt
+      refextu 
     </div>
-
   </body>
 </html>
