--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html manifest="cache.manifest">
   <body>
     <div class="content">
-      refextu 
+      refextu - refextu
     </div>
   </body>
 </html>
