reverse index.html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <html manifest="cache.manifest">
   <body>
     <div class="content">
-      refextu - refextu
-    </div>
+      refextu
   </body>
 </html>
